--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,56 +19,58 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
-
+dependency_overrides:
+  # Override path_provider to pick up fixes for FFI changes.
+  path_provider: ^2.0.0-nullsafety.1
 dependencies:
   flutter:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: any
   google_fonts:
   firebase_auth:
 
-  flutter_downloader: ^1.5.0
+  flutter_downloader: any
   dio: any
-  path_provider: ^1.6.14
-  permission_handler: ^5.0.1+1
+  path_provider: any
+  permission_handler: any
   ext_storage: any
-  shared_preferences: ^0.5.6+3
-  font_awesome_flutter: ^8.11.0
+  shared_preferences: any
+  font_awesome_flutter: any
   # firebase_storage: 3.0.4
   # image_picker: ^0.6.7+4
   # image_cropper: 1.0.2
-  razorpay_flutter: ^1.2.5
-  video_player_web: ^0.1.0
-  flutter_rating_bar: ^4.0.0
+  razorpay_flutter: any
+  video_player_web: any
+  flutter_rating_bar: any
   google_sign_in:
   firebase_core:
-  image_picker: ^0.6.7+17
-  pdf_flutter: ^1.1.3
-  file_picker: ^1.13.3
-  pdf: ^1.13.0
-  toast: ^0.1.5
-  video_player: ^0.5.1
-  youtube_player_flutter: ^7.0.0+7
-  progress_button: ^0.0.2
+  image_picker: any
+  pdf_flutter: any
+  file_picker: any
+  pdf: any
+  toast: any
+  video_player: any
+  youtube_player_flutter: any
+  progress_button: any
   cloud_firestore:
-  firebase_storage: ^3.1.6
-  fluttertoast: ^7.1.8
-  email_validator: "^1.0.5"
-  flutter_overboard: ^1.1.5
+  firebase_storage: any
+  fluttertoast: any
+  email_validator: any
+  flutter_overboard: any
   # provider: ^3.1.0
-  flutter_custom_clippers: ^1.1.2
+  flutter_custom_clippers: any
 
-  easy_gradient_text: ^1.0.0
-  concentric_transition: ^0.1.1
-  flutter_spinkit: "^4.1.2"
-  flutter_easyloading: ^2.2.2
-  multiple_stream_builder: ^1.1.0
-  awesome_dialog: ^1.3.2
-  animated_button: ^0.1.3
-  agora_rtc_engine: ^3.3.2
+  easy_gradient_text: any
+  concentric_transition: any
+  flutter_spinkit: any
+  flutter_easyloading: any
+  multiple_stream_builder: any
+  awesome_dialog: any
+  animated_button: any
+  agora_rtc_engine: any
 
 dev_dependencies:
   flutter_launcher_icons: "^0.8.0"
@@ -106,7 +108,7 @@ flutter:
     - assets/advanced.jpg
     - assets/inter.jpg
     - assets/donate.png
-    - assets/devs.jpg 
+    - assets/devs.jpg
     - assets/checklists.png
     - assets/powered_by.png
     - assets/quran.png
